Rename install step for backend dependencies

--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -17,11 +17,12 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
+      - name: Install backend dependencies
         run: npm install
+        working-directory: ./backend
 
       - name: Build frontend
         run: |
-          cd frontend
           npm install
           npm run build
+        working-directory: ./frontend
